# Just_learning

Hello_Triangle/: .gitignore
Hello_Triangle/include/glad/: glad.h
Hello_Triangle/shaders/: fragment_shader.glsl  vertex_shader.glsl
Hello_Triangle/src/: CMakeLists.txt  compiler.bat  glad.c  main.cpp
